src/Components/Header/Header.css
#main-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin: 20px 40px;
}

.sea-gif {
  width: 100px;
  height: 100px;
  border-radius: 50px;
  object-fit: cover;
  border: 1px solid #646cff;
  box-shadow: 1px 0px 1em #213547;
}

#sea-angel {
    transition: opacity 400ms ease;
    cursor: pointer;
    opacity: 1;
}

#sea-angel:hover {
  opacity: 0;
}

#fanni-angel {
  width: 100px;
  height: 100px;
  border-radius: 50px;
  object-fit: cover;
  border: 1px solid #646cff;
  box-shadow: 1px 0px 1em #213547;
  transition: opacity 400ms ease;
  opacity: 0;
  position: absolute;
  top: 20px;
  left: 40px;
}

#sea-angel:hover + #fanni-angel {
  opacity: 1;
}

/*
.fa-house {
    padding-right: 15px;
}
*/

nav {
  display: flex;
  gap: 5px;
}

.nav-darkmode {
  align-self: center;
}

@media (max-width: 768px) {
  #main-header {
    margin: 20px;
  }
}

